--- a/public/index.html
+++ b/public/index.html
@@ -97,23 +97,22 @@
             
         </div>
         <div id="point6" class="grid-item bottom point blue-home">
-          <img class="blue piece" id="blue8" src="assets/blue_piece.png" draggable="true">
+          <!-- <img class="blue piece" id="blue8" src="assets/blue_piece.png" draggable="true">
           <img class="blue piece" id="blue9" src="assets/blue_piece.png" draggable="true">
           <img class="blue piece" id="blue10" src="assets/blue_piece.png" draggable="true">
           <img class="blue piece" id="blue11" src="assets/blue_piece.png" draggable="true">
-          <img class="blue piece" id="blue12" src="assets/blue_piece.png" draggable="true">
+          <img class="blue piece" id="blue12" src="assets/blue_piece.png" draggable="true"> -->
         </div>
         <div id="point5" class="grid-item bottom point blue-home">
-          <img class="blue piece" id="blue13" src="assets/blue_piece.png" draggable="true">
+          <!-- <img class="blue piece" id="blue13" src="assets/blue_piece.png" draggable="true">
           <img class="blue piece" id="blue14" src="assets/blue_piece.png" draggable="true">
-          <img class="blue piece" id="blue15" src="assets/blue_piece.png" draggable="true">
+          <img class="blue piece" id="blue15" src="assets/blue_piece.png" draggable="true"> -->
         </div>
         <div id="point4" class="grid-item bottom point blue-home">
-          <img class="blue piece" id="blue6" src="assets/blue_piece.png" draggable="true">
-          <img class="blue piece" id="blue7" src="assets/blue_piece.png" draggable="true">
+          <!-- <img class="blue piece" id="blue6" src="assets/blue_piece.png" draggable="true">
+          <img class="blue piece" id="blue7" src="assets/blue_piece.png" draggable="true"> -->
         </div>
         <div id="point3" class="grid-item bottom point blue-home">
-          <img class="blue piece" id="blue1" src="assets/blue_piece.png" draggable="true">
         </div>
         <div id="point2" class="grid-item bottom point blue-home">
           <img class="blue piece" id="blue2" src="assets/blue_piece.png" draggable="true">
@@ -122,6 +121,7 @@
           <img class="blue piece" id="blue5" src="assets/blue_piece.png" draggable="true">
         </div>
         <div id="point1" class="grid-item bottom point blue-home">
+            <img class="blue piece" id="blue1" src="assets/blue_piece.png" draggable="true">
           <!-- <img class="red piece" id="red24" src="assets/red_piece.png" draggable="true">
           <img class="red piece" id="red25" src="assets/red_piece.png" draggable="true"> -->
         </div>
@@ -135,6 +135,7 @@
           <img id="dice2" class="dice" src="assets/dice2.png" alt="">
       </div>
       <p id="turn-message">Blue's turn</p>
+      <p id='error-msg'></p>
     </div>
   </body>
   <script src="helpers.js"></script>
